--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -80,13 +80,13 @@ stages:
           clean: true
           submodules: true
         - task: UseDotNet@2
-          displayName: 'Use .NET Core sdk'
+          displayName: 'Use .NET Core 5.0.x'
           inputs:
             packageType: sdk
             version: 5.0.x
             installationPath: $(Build.SourcesDirectory)/.dotnet
         - task: UseDotNet@2
-          displayName: 'Use .NET Core sdk'
+          displayName: 'Use .NET Core 6.0.100'
           inputs:
             packageType: sdk
             version: 6.0.100
