Don't use prerelease VS for CI builds
Trying this to see if it fixes our Integration tests

--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -46,10 +46,10 @@ stages:
         pool:
           ${{ if or(eq(variables['System.TeamProject'], 'public'), in(variables['Build.Reason'], 'PullRequest')) }}:
             name: NetCore1ESPool-Public
-            demands: ImageOverride -equals build.windows.amd64.vs2022.pre.open
+            demands: ImageOverride -equals build.windows.amd64.vs2022.open
           ${{ if and(ne(variables['System.TeamProject'], 'public'), notin(variables['Build.Reason'], 'PullRequest')) }}:
             name: NetCore1ESPool-Internal
-            demands: ImageOverride -equals build.windows.amd64.vs2022.pre
+            demands: ImageOverride -equals build.windows.amd64.vs2022
         variables:
         # Enable signing for internal, non-PR builds
         - ${{ if and(ne(variables['System.TeamProject'], 'public'), notin(variables['Build.Reason'], 'PullRequest')) }}:
