Fix samples' Directory.Build.targets to import root Directory.Build.targets

--- a/samples/Directory.Build.targets
+++ b/samples/Directory.Build.targets
@@ -11,4 +11,6 @@
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
+
+  <Import Project="$([MSBuild]::GetPathOfFileAbove('Directory.Build.targets', '$(MSBuildThisFileDirectory)../'))" />
 </Project>
