--- a/src/extensions/binaryanalysis/Microsoft.DotNet.UpgradeAssistant.Extensions.BinaryAnalysis/Microsoft.DotNet.UpgradeAssistant.Extensions.BinaryAnalysis.csproj
+++ b/src/extensions/binaryanalysis/Microsoft.DotNet.UpgradeAssistant.Extensions.BinaryAnalysis/Microsoft.DotNet.UpgradeAssistant.Extensions.BinaryAnalysis.csproj
@@ -6,6 +6,8 @@
     <Nullable>enable</Nullable>
     <PackExtension>true</PackExtension>
     <ExtensionName>BinaryAnalysis</ExtensionName>
+    <Description>Enables analysis of binary files for compatibility with .NET Core</Description>
+    <PackageReadmeFile>binary_analysis.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,6 +16,13 @@
 
   <ItemGroup>
     <AdditionalFiles Include="AnalyzerReleases.Unshipped.md" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\..\..\docs\binary_analysis.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
