--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -65,6 +65,7 @@ stages:
               /p:TeamName=$(_TeamName)
               /p:DotNetPublishUsingPipelines=$(_PublishUsingPipelines)
               /p:OfficialBuildId=$(BUILD.BUILDNUMBER)
+              /p:SkipSymbolPublishingDryRun=true
           - name: _OfficialBuildIdArgs
         # else
         - ${{ if or(eq(variables['System.TeamProject'], 'public'), in(variables['Build.Reason'], 'PullRequest')) }}:
@@ -73,6 +74,7 @@ stages:
           - name: _BuildArgs
             value: /p:SignType=$(_SignType)
               /p:DotNetSignType=$(_SignType)
+              /p:SkipSymbolPublishingDryRun=true
         strategy:
           matrix:
             Debug:
