Don't trigger CI builds when we're just updating MD files/docs

--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -24,10 +24,18 @@ trigger:
   branches:
     include:
       - main
+  paths:
+    exclude:
+      - '**/*.md'
+      - docs
 pr:
   branches:
     include:
     - '*'
+  paths:
+    exclude:
+      - '**/*.md'
+      - docs
 
 stages:
 - stage: build
