--- a/src/extensions/wcfMigration/Microsoft.DotNet.UpgradeAssistant.Extensions.WCFUpdater/Microsoft.DotNet.UpgradeAssistant.Extensions.WCFUpdater.csproj
+++ b/src/extensions/wcfMigration/Microsoft.DotNet.UpgradeAssistant.Extensions.WCFUpdater/Microsoft.DotNet.UpgradeAssistant.Extensions.WCFUpdater.csproj
@@ -1,18 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>Microsoft.DotNet.UpgradeAssistant.Extensions.WCFUpdater</AssemblyName>
     <RootNamespace>Microsoft.DotNet.UpgradeAssistant.Extensions.WCFUpdater</RootNamespace>
     <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.2.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Features" Version="4.2.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="4.2.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.8.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
-    <PackageReference Include="xunit" Version="2.4.1" />
   </ItemGroup>
 
   <ItemGroup>
