Improve updaters so beantrader example can run directly

--- a/tests/tool/Integration.Tests/IntegrationScenarios/WCFSample/Original/App.config
+++ b/tests/tool/Integration.Tests/IntegrationScenarios/WCFSample/Original/App.config
@@ -18,7 +18,7 @@
           <baseAddresses>
             <!-- Requires: netsh http add urlacl url=http://+:8080/ user=REDMOND\mikerou -->
             <add baseAddress="http://localhost:8011/" />
-            <add baseAddress="net.tcp://localhost:90/test/" />
+            <add baseAddress="net.tcp://localhost:90/" />
           </baseAddresses>
         </host>
       </service>
