--- a/tests/tool/Integration.Tests/IntegrationScenarios/WCFSample/Upgraded/wcf.config
+++ b/tests/tool/Integration.Tests/IntegrationScenarios/WCFSample/Upgraded/wcf.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<system.serviceModel>
-  <!--The behavior element is not supported in configuration in CoreWCF. Some service behaviors, such as metadata, are configured in the source code.-->
-  <!--<behaviors>
+<configuration>
+  <system.serviceModel>
+    <!--The behavior element is not supported in configuration in CoreWCF. Some service behaviors, such as metadata, are configured in the source code.-->
+    <!--<behaviors>
   <serviceBehaviors>
     <behavior name="beanTraderBehaviour">
       <serviceMetadata httpGetEnabled="true" />
@@ -9,29 +10,30 @@
     </behavior>
   </serviceBehaviors>
 </behaviors>-->
-  <services>
-    <service name="BeanTraderServer.BeanTrader" behaviorConfiguration="beanTraderBehaviour">
-      <endpoint address="/test/BeanTraderService" binding="netTcpBinding" bindingConfiguration="WindowsClient" contract="BeanTrader.IBeanTrader"></endpoint>
-      <!--The mex endpoint is removed because it's not support in CoreWCF. Instead, the metadata service is enabled in the source code.-->
-      <!--The host element is not supported in configuration in CoreWCF. The port that endpoints listen on is instead configured in the source code.-->
-      <!--<host>
+    <services>
+      <service name="BeanTraderServer.BeanTrader" behaviorConfiguration="beanTraderBehaviour">
+        <endpoint address="/BeanTraderService" binding="netTcpBinding" bindingConfiguration="WindowsClient" contract="BeanTrader.IBeanTrader"></endpoint>
+        <!--The mex endpoint is removed because it's not support in CoreWCF. Instead, the metadata service is enabled in the source code.-->
+        <!--The host element is not supported in configuration in CoreWCF. The port that endpoints listen on is instead configured in the source code.-->
+        <!--<host>
   <baseAddresses>
     <!- - Requires: netsh http add urlacl url=http://+:8080/ user=REDMOND\mikerou - ->
     <add baseAddress="http://localhost:8011/" />
-    <add baseAddress="net.tcp://localhost:90/test/" />
+    <add baseAddress="net.tcp://localhost:90/" />
   </baseAddresses>
 </host>-->
-    </service>
-  </services>
-  <bindings>
-    <netTcpBinding>
-      <binding name="WindowsClient">
-        <!-- Was going to use TransportWithMessageCredential security, but 
+      </service>
+    </services>
+    <bindings>
+      <netTcpBinding>
+        <binding name="WindowsClient">
+          <!-- Was going to use TransportWithMessageCredential security, but 
                that is not yet supported on .NET Core. https://github.com/dotnet/wcf/issues/8 -->
-        <security mode="Transport">
-          <transport clientCredentialType="Certificate" />
-        </security>
-      </binding>
-    </netTcpBinding>
-  </bindings>
-</system.serviceModel>
+          <security mode="Transport">
+            <transport clientCredentialType="Certificate" />
+          </security>
+        </binding>
+      </netTcpBinding>
+    </bindings>
+  </system.serviceModel>
+</configuration>
