--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,13 +1,15 @@
 <Project>
   <Import Project="Sdk.props" Sdk="Microsoft.DotNet.Arcade.Sdk" />
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>full</DebugType>
+  </PropertyGroup>
+  
   <PropertyGroup>
     <Copyright>$(CopyrightNetFoundation)</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <ValidateLayerDiagram>true</ValidateLayerDiagram>
-    <DebugType>embedded</DebugType>
-    <DebugSymbols>true</DebugSymbols>
-
+  
     <!--
       Use version 3.8.0 of CodeAnalysis assemblies to preserve compatibility
       with Visual Studio 2019 16.8
