Various perf improvements
Nothing certain... yet.

--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/Properties/launchSettings.json
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/Properties/launchSettings.json
@@ -15,7 +15,8 @@
     },
     "Upgrade": {
       "commandName": "Project",
-      "commandLineArgs": "upgrade ..\\..\\..\\..\\..\\tests\\tool\\Integration.Tests\\IntegrationScenarios\\MauiSample\\droid\\Original\\EwDavidForms.sln",
+      "commandLineArgs": "upgrade TemplateMvc.csproj --non-interactive",
+      "workingDirectory": "C:\\s\\ua\\public\\tests\\tool\\Integration.Tests\\IntegrationScenarios\\AspNetSample\\csharp\\Original",
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "Development"
       }
