--- a/src/extensions/wcfMigration/Microsoft.DotNet.UpgradeAssistant.Extensions.WCFUpdater/Microsoft.DotNet.UpgradeAssistant.Extensions.WCFUpdater.csproj
+++ b/src/extensions/wcfMigration/Microsoft.DotNet.UpgradeAssistant.Extensions.WCFUpdater/Microsoft.DotNet.UpgradeAssistant.Extensions.WCFUpdater.csproj
@@ -8,8 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.8.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" >
+        <Version>$(MicrosoftCodeAnalysisVersion)</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0"/>
   </ItemGroup>
 
   <ItemGroup>
