--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "modules/try-convert"]
-	path = modules/try-convert
+[submodule "modules/try-convert-repo"]
+	path = modules/try-convert-repo
 	url = https://github.com/dotnet/try-convert
