--- a/tests/tool/Integration.Tests/IntegrationScenarios/WCFSample/Upgraded/ConsoleApp.csproj
+++ b/tests/tool/Integration.Tests/IntegrationScenarios/WCFSample/Upgraded/ConsoleApp.csproj
@@ -6,20 +6,13 @@
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System.IdentityModel" />
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
-    <None Update="BeanTrader.pfx">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\BeanTraderInterfaces\BeanTraderCommon.csproj" />
+    <ProjectReference Include="..\WcfServiceLibrary1\WcfServiceLibrary1.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-    <PackageReference Include="Serilog" Version="2.8.0" />
-    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
     <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.2.222702">
       <PrivateAssets>all</PrivateAssets>
