--- a/tests/tool/Integration.Tests/IntegrationScenarios/WCFSample/Upgraded/wcf.config
+++ b/tests/tool/Integration.Tests/IntegrationScenarios/WCFSample/Upgraded/wcf.config
@@ -1,39 +1,45 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.serviceModel>
-    <!--The behavior element is not supported in configuration in CoreWCF. Some service behaviors, such as metadata, are configured in the source code.-->
-    <!--<behaviors>
-  <serviceBehaviors>
-    <behavior name="beanTraderBehaviour">
-      <serviceMetadata httpGetEnabled="true" />
-      <serviceDebug includeExceptionDetailInFaults="true" />
-    </behavior>
-  </serviceBehaviors>
-</behaviors>-->
     <services>
-      <service name="BeanTraderServer.BeanTrader" behaviorConfiguration="beanTraderBehaviour">
-        <endpoint address="/BeanTraderService" binding="netTcpBinding" bindingConfiguration="WindowsClient" contract="BeanTrader.IBeanTrader"></endpoint>
-        <!--The mex endpoint is removed because it's not support in CoreWCF. Instead, the metadata service is enabled in the source code.-->
+      <service name="WcfServiceLibrary1.Service1">
         <!--The host element is not supported in configuration in CoreWCF. The port that endpoints listen on is instead configured in the source code.-->
         <!--<host>
   <baseAddresses>
-    <!- - Requires: netsh http add urlacl url=http://+:8080/ user=REDMOND\mikerou - ->
-    <add baseAddress="http://localhost:8011/" />
-    <add baseAddress="net.tcp://localhost:90/" />
+    <add baseAddress="http://localhost:8733/Service1/" />
   </baseAddresses>
 </host>-->
+        <!-- Service Endpoints -->
+        <!-- Unless fully qualified, address is relative to base address supplied above -->
+        <endpoint address="/Service1/" binding="basicHttpBinding" contract="WcfServiceLibrary1.IService1">
+          <!-- 
+              Upon deployment, the following identity element should be removed or replaced to reflect the 
+              identity under which the deployed service runs.  If removed, WCF will infer an appropriate identity 
+              automatically.
+          -->
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <!-- Metadata Endpoints -->
+        <!-- The Metadata Exchange endpoint is used by the service to describe itself to clients. -->
+        <!-- This endpoint does not use a secure binding and should be secured or removed before deployment -->
+        <!--The mex endpoint is removed because it's not support in CoreWCF. Instead, the metadata service is enabled in the source code.-->
       </service>
     </services>
-    <bindings>
-      <netTcpBinding>
-        <binding name="WindowsClient">
-          <!-- Was going to use TransportWithMessageCredential security, but 
-               that is not yet supported on .NET Core. https://github.com/dotnet/wcf/issues/8 -->
-          <security mode="Transport">
-            <transport clientCredentialType="Certificate" />
-          </security>
-        </binding>
-      </netTcpBinding>
-    </bindings>
+    <!--The behavior element is not supported in configuration in CoreWCF. Some service behaviors, such as metadata, are configured in the source code.-->
+    <!--<behaviors>
+  <serviceBehaviors>
+    <behavior>
+      <!- - To avoid disclosing metadata information, 
+          set the values below to false before deployment - ->
+      <serviceMetadata httpGetEnabled="True" />
+      <!- - To receive exception details in faults for debugging purposes, 
+          set the value below to true.  Set to false before deployment 
+          to avoid disclosing exception information - ->
+      <serviceDebug includeExceptionDetailInFaults="False" />
+    </behavior>
+  </serviceBehaviors>
+</behaviors>-->
   </system.serviceModel>
 </configuration>
