--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
@@ -11,7 +11,7 @@
 
   "Telemetry": {
     "IsEnabled": "true",
-    "InstrumentationKey": "66aba558-ae18-4ec4-a738-517213cfcdfb",
+    "ConfigurationString": "66aba558-ae18-4ec4-a738-517213cfcdfb",
     "DisplayName": "Upgrade Assistant",
     "DetailsLink": "https://aka.ms/upgrade-assistant-telemetry"
   },
