Add WCF update extension (#1237)
* Add WCF extension (as a default extension in Cli), unit tests, integration tests (E2E Test)
* Add helpers for logging & debugging
* Set TFM to .NET Standard 2.0 for better flexibility
Thanks to Matt Connew, Mike Rousos, Hong Li, and Brandon Hurlburt for the code review!

--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/Microsoft.DotNet.UpgradeAssistant.Cli.csproj
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/Microsoft.DotNet.UpgradeAssistant.Cli.csproj
@@ -124,6 +124,9 @@
     <Extension Include="$(ExtensionsDirectory)binaryanalysis\Microsoft.DotNet.UpgradeAssistant.Extensions.BinaryAnalysis\Microsoft.DotNet.UpgradeAssistant.Extensions.BinaryAnalysis.csproj">
       <Name>binaryanalysis</Name>
     </Extension>
+    <Extension Include="$(ExtensionsDirectory)wcf\Microsoft.DotNet.UpgradeAssistant.Extensions.WCFUpdater\Microsoft.DotNet.UpgradeAssistant.Extensions.WCFUpdater.csproj">
+      <Name>wcf</Name>
+    </Extension>
   </ItemGroup>
   <ItemGroup>
     <Compile Update="LocalizedStrings.Designer.cs">
