Add type for file path & fix some tests

--- a/tests/tool/Integration.Tests/IntegrationScenarios/WCFSample/Upgraded/wcf.config
+++ b/tests/tool/Integration.Tests/IntegrationScenarios/WCFSample/Upgraded/wcf.config
@@ -2,7 +2,7 @@
 <configuration>
   <system.serviceModel>
     <services>
-      <service name="WcfServiceLibrary1.Service1">
+      <service name="WcfServiceLibrary1.Service1" behaviorConfiguration="">
         <!--The host element is not supported in configuration in CoreWCF. The port that endpoints listen on is instead configured in the source code.-->
         <!--<host>
   <baseAddresses>
@@ -30,7 +30,7 @@
     <!--The behavior element is not supported in configuration in CoreWCF. Some service behaviors, such as metadata, are configured in the source code.-->
     <!--<behaviors>
   <serviceBehaviors>
-    <behavior>
+    <behavior name="">
       <!- - To avoid disclosing metadata information, 
           set the values below to false before deployment - ->
       <serviceMetadata httpGetEnabled="True" />
