Fixes based on PR feedback

--- a/src/extensions/try-convert/MSBuild.Conversion.Project/MSBuild.Conversion.Project.csproj
+++ b/src/extensions/try-convert/MSBuild.Conversion.Project/MSBuild.Conversion.Project.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <To Include="Smoke.Tests" />
+    <InternalsVisibleTo Include="Smoke.Tests" />
     <InternalsVisibleTo Include="MauiSmoke.Tests" />
   </ItemGroup>
 
