--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,13 +1,13 @@
 # Users referenced in this file will automatically be requested as reviewers for PRs that modify the given paths.
 # See https://help.github.com/articles/about-code-owners/
 
-*maui*                  @dotnet/dotnet-upgrade-assistant-maui
-src/extensions/maui/    @dotnet/dotnet-upgrade-assistant-maui
+*                        @dotnet/dotnet-upgrade-assistant-admin
 
-*uwp*                   @dotnet/dotnet-upgrade-assistant-uwp
-src/extensions/windows/ @dotnet/dotnet-upgrade-assistant-uwp
+*maui*                   @dotnet/dotnet-upgrade-assistant-maui @dotnet/dotnet-upgrade-assistant-admin
+/src/extensions/maui/    @dotnet/dotnet-upgrade-assistant-maui @dotnet/dotnet-upgrade-assistant-admin
 
-*wcf*                   @dotnet/dotnet-upgrade-assistant-wcf
-src/extensions/wcf/     @dotnet/dotnet-upgrade-assistant-wcf
+*uwp*                    @dotnet/dotnet-upgrade-assistant-uwp @dotnet/dotnet-upgrade-assistant-admin
+/src/extensions/windows/ @dotnet/dotnet-upgrade-assistant-uwp @dotnet/dotnet-upgrade-assistant-admin
 
-*                       @dotnet/dotnet-upgrade-assistant-admin
+*wcf*                    @dotnet/dotnet-upgrade-assistant-wcf @dotnet/dotnet-upgrade-assistant-admin
+/src/extensions/wcf/     @dotnet/dotnet-upgrade-assistant-wcf @dotnet/dotnet-upgrade-assistant-admin
