Fixing tokens used by workflows

--- a/.github/workflows/auto-project-prs.yml
+++ b/.github/workflows/auto-project-prs.yml
@@ -4,8 +4,9 @@ on:
   pull_request:
     types:
       - opened
+
 env:
-  MY_GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+  MY_GITHUB_TOKEN: ${{ secrets.ACTIONS_PAT }}
 
 jobs:
   assign_one_project:
