--- a/.github/workflows/auto-project-issues.yml
+++ b/.github/workflows/auto-project-issues.yml
@@ -4,8 +4,11 @@ on:
   issues:
     types:
       - opened
+
+environment: 'Auto-Project Secret'
+
 env:
-  MY_GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+  MY_GITHUB_TOKEN: ${{ secrets.ACTIONS_PAT }}
 
 jobs:
   assign_one_project:
