--- a/.github/workflows/auto-project-prs.yml
+++ b/.github/workflows/auto-project-prs.yml
@@ -4,15 +4,15 @@ on:
   pull_request:
     types:
       - opened
-env:
-  MY_GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
 
 jobs:
   assign_one_project:
     runs-on: ubuntu-latest
+    environment: 'Auto-Project Secret'
     name: Assign to UA Project
     steps:
     - uses: srggrs/assign-one-project-github-action@1.2.1
       with:
         project: 'https://github.com/orgs/dotnet/projects/108'
         column_name: 'Dev In Progress'
+        MY_GITHUB_TOKEN: ${{ secrets.ACTIONS_PAT }}
