--- a/.github/workflows/auto-project-prs.yml
+++ b/.github/workflows/auto-project-prs.yml
@@ -4,15 +4,16 @@ on:
   pull_request:
     types:
       - opened
-env:
-  MY_GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+      - edited
+      - reopened
+      - synchronize
 
 jobs:
-  assign_one_project:
+  Add_PR_to_Dev_In_Progress:
     runs-on: ubuntu-latest
-    name: Assign to UA Project
     steps:
-    - uses: srggrs/assign-one-project-github-action@1.2.1
+    - uses: konradpabjan/actions-add-new-issue-to-column@v1.1
       with:
-        project: 'https://github.com/orgs/dotnet/projects/108'
-        column_name: 'Dev In Progress'
+        action-token: "${{ secrets.ACTIONS_PAT }}"
+        project-url: 'https://github.com/orgs/dotnet/projects/108'
+        column-name: 'Dev In Progress'
