Enable CodeQL for the repo (#1356)
* Enable CodeQL for the repo
* Updating build images

--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -14,6 +14,8 @@ variables:
     - group: UpgradeAssistant_SDL_Settings
   - name: DownloadLooseAssemblyIndex
     value: true
+  - name: Codeql.Enabled
+    value: true
   - name: net5ver
     value: 5.0.x
   - name: net6ver
@@ -60,10 +62,10 @@ stages:
         pool:
           ${{ if or(eq(variables['System.TeamProject'], 'public'), in(variables['Build.Reason'], 'PullRequest')) }}:
             name: NetCore-Public
-            demands: ImageOverride -equals build.windows.amd64.vs2022.pre.open
+            demands: ImageOverride -equals windows.vs2022preview.amd64.open
           ${{ if and(ne(variables['System.TeamProject'], 'public'), notin(variables['Build.Reason'], 'PullRequest')) }}:
             name: NetCore1ESPool-Internal
-            demands: ImageOverride -equals build.windows.amd64.vs2022.pre
+            demands: ImageOverride -equals windows.vs2022preview.amd64
         variables:
         # Enable signing and publishing for internal, non-PR builds
         - ${{ if and(ne(variables['System.TeamProject'], 'public'), notin(variables['Build.Reason'], 'PullRequest')) }}:
