--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -1,13 +1,18 @@
 name: $(Date:yyyyMMdd).$(Rev:r)
+parameters:
+- name: OfficialRelease
+  displayName: "Build and publish an official release"
+  type: boolean
+  default: false
 variables:
+- name: Build.OfficialRelease
+  value: ${{ parameters.OfficialRelease }}
 - name: Codeql.Enabled
   value: true
-- name: PublishNuGetOrg
-  value: false
 - name: TeamName
   value: vscx-tools-authoring
 - name: TimestampPackage
-  value: true
+  value: ${{ not (parameters.OfficialRelease) }}
 trigger:
   branches:
     include:
@@ -42,7 +47,7 @@ extends:
             publishVstsFeed: 97a41293-2972-4f48-8c0e-05493ae82010
           - output: nuget
             displayName: 'NuGet push to NuGet.org'
-            condition: and(and(succeeded(), eq(variables['PublishNuGetOrg'], 'true')), eq(variables['TimestampPackage'], 'false'))
+            condition: and(succeeded(), eq(variables['Build.OfficialRelease'], 'true'))
             packageParentPath: '$(Build.ArtifactStagingDirectory)\Packages'
             packagesToPush: $(Build.ArtifactStagingDirectory)\Packages\*.nupkg;!$(Build.ArtifactStagingDirectory)\Packages\*.symbols.nupkg
             nuGetFeedType: external
@@ -91,5 +96,5 @@ extends:
           displayName: Build Mappings NuGet package
           inputs:
             solution: src\UpgradeAssistant.Mappings\UpgradeAssistant.Mappings.csproj
-            msbuildArgs: /t:Pack /p:PackageOutputPath="$(Build.ArtifactStagingDirectory)\Packages" /p:TimestampPackage=$(TimestampPackage) 
+            msbuildArgs: /t:Pack /p:TimestampPackage=$(TimestampPackage) /p:PackageOutputPath="$(Build.ArtifactStagingDirectory)\Packages"
             configuration: Release
